--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>TO DO LIST</title>
 </head>
 <body>
+    <div class="container-fluid">
+        <h2>To Do List</h2>
+        <div class="row">
+            <button type="button">Sort</button>
+            <input type="text" id="toDoInput" placeholder="Add items to your to do list...">
+            <button type="button">Add</button>
+        </div>
+    </div>
     
     <script src="./script/code.js"></script>
 </body>
