--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>TO DO LIST</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" id="outerContainer">
         <h2>To Do List</h2>
         <div class="row">
-            <button type="button">Sort</button>
+            <button type="button" id="tDButton">Sort</button>
             <input type="text" id="toDoInput" placeholder="Add items to your to do list...">
-            <button type="button">Add</button>
+            <button type="button" id="tDButton">Add</button>
         </div>
     </div>
-    
+
     <script src="./script/code.js"></script>
 </body>
 </html>
