--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <title>TO DO LIST</title>
 </head>
 <body>
-    <div class="container-fluid" id="outerContainer">
-        <h2>To Do List</h2>
+    <div class="container">
+        <h1>To Do List</h1>
         <div class="row">
-            <button type="button" id="tDButton">Sort</button>
-            <input type="text" id="toDoInput" placeholder="Add items to your to do list...">
-            <button type="button" id="tDButton">Add</button>
+            <button type="button" id="tDButton"sortButton>Sort</button>
+        <input type="text" id="toDoInput" placeholder="Add items to your to do list...">
+        <button type="button" id="tDButton" addButton>Add</button>
+        </div>
+        <div class="list">
+            <ul id="taskList" taskList>
+            </ul>
         </div>
     </div>
 
